[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "David Slusser", email = "dbslusser@gmail.com"},
    ]
description = "host utilities for django projects"
license = {file = "LICENSE"}
keywords = ["django", "gui", "host", "utilities"]
name = "django-hostutils"

dependencies = [
    "django",
    "django-handyhelpers",
    "psutil",
]
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "build",
    "mypy",
    "mypy-extensions",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "types-python-dateutil",
    "typing_extensions",
]

[project.urls]
homepage = "https://github.com/davidslusser/django-hostutils"
documentation = "https://django-hostutils.readthedocs.io/en/latest/index.html "
repository = "https://github.com/davidslusser/django-hostutils"


[tool.bandit]
exclude_dirs = ["venv", "tests"]


[tool.black]
line-length = 120


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
branch = true
source = ["tests"]
omit = ["*_test.py", "*/tests/*", "*_version.py", "setup.py"]


[tool.distutils.bdist_wheel]
universal = true


[tool.flake8]
ignore = "E203,E266,H106,H904,E133"
max-line-length = 120
max-complexity = 25
hang-closing = true
exclude = "tests"


[tool.mypy]
ignore_missing_imports = true
exclude = ['venv/*']


[tool.pylint.format]
max-line-length = "120"


[tool.pylint.MASTER]
ignore-paths = ["tests"]
exit-zero = true


[tool.pylint.'MESSAGES CONTROL']
disable = "R0903,R0913,R0901,W0613,W0718,C0114,C0115,C0103,R1725,R0801,R1702,R0912"


# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra' --doctest-modules --cov=."
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["docs*", "tests*"]
